--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,12 @@
     <!-- <script src="%PUBLIC_URL%/libs/jquery-2.1.1.min.js"></script> -->
     <script src="%PUBLIC_URL%/libs/strophe/strophe.min.js"></script>
     <script src="%PUBLIC_URL%/libs/strophe/strophe.disco.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- <script src="%PUBLIC_URL%/libs/lib-jitsi-meet.min.js"></script> -->
     <!-- <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
+    <!-- <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script> -->
+    <script src="https://the-prdct.com/libs/lib-jitsi-meet.min.js"></script>
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
